--- a/font/icomoon/style.css
+++ b/font/icomoon/style.css
@@ -1,18 +1,19 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?7vfwjk');
-  src:  url('fonts/icomoon.eot?7vfwjk#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?7vfwjk') format('truetype'),
-    url('fonts/icomoon.woff?7vfwjk') format('woff'),
-    url('fonts/icomoon.svg?7vfwjk#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?zd5o89');
+  src:  url('fonts/icomoon.eot?zd5o89#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?zd5o89') format('truetype'),
+    url('fonts/icomoon.woff?zd5o89') format('woff'),
+    url('fonts/icomoon.svg?zd5o89#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
+  font-display: block;
 }
 
 [class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
-  speak: none;
+  speak: never;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -24,3 +25,102 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-email:before {
+  content: "\e900";
+}
+.icon-instagram:before {
+  content: "\e901";
+}
+.icon-snapchat:before {
+  content: "\e90b";
+}
+.icon-facebook:before {
+  content: "\e90c";
+}
+.icon-phone:before {
+  content: "\e90d";
+}
+.icon-linkedin:before {
+  content: "\e90e";
+}
+.icon-twitter:before {
+  content: "\e90f";
+}
+.icon-youtube:before {
+  content: "\e910";
+}
+.icon-tiktok:before {
+  content: "\e911";
+}
+.icon-discord:before {
+  content: "\e912";
+}
+.icon-slack:before {
+  content: "\e913";
+}
+.icon-skype:before {
+  content: "\e914";
+}
+.icon-reddit:before {
+  content: "\e915";
+}
+.icon-groupme:before {
+  content: "\e916";
+}
+.icon-whatsapp:before {
+  content: "\e917";
+}
+.icon-line:before {
+  content: "\e918";
+}
+.icon-www:before {
+  content: "\e919";
+}
+.icon-ion-checkmark-circled---IoniconsCopy-6:before {
+  content: "\e91a";
+}
+.icon-user---anticoncopy-3:before {
+  content: "\e91b";
+}
+.icon-Address-Card---FontAwesomeCopy-3:before {
+  content: "\e91c";
+}
+.icon-qrcode---FontAwesome:before {
+  content: "\e91d";
+}
+.icon-chain:before {
+  content: "\f0c1";
+}
+.icon-link:before {
+  content: "\f0c1";
+}
+.icon-error:before {
+  content: "\e91e";
+}
+.icon-content_copy:before {
+  content: "\e902";
+}
+.icon-createmode_editedit:before {
+  content: "\e903";
+}
+.icon-save:before {
+  content: "\e904";
+}
+.icon-remove_red_eyevisibility:before {
+  content: "\e905";
+}
+.icon-cancel:before {
+  content: "\e90a";
+}
+.icon-chevron-right:before {
+  content: "\e906";
+}
+.icon-menu:before {
+  content: "\e907";
+}
+.icon-plus:before {
+  content: "\e908";
+}
+.icon-x:before {
+  content: "\e909";
+}
