--- a/scss/public.scss
+++ b/scss/public.scss
@@ -17,69 +17,341 @@ body {
   padding: 0;
   color: rgba(90, 90, 90, 1.00);
 
-  font-size: medium;
+  font-size: 12px;
   text-align: center;
-  font-family: "微軟正黑體", "Open sans", "Helvetica Neue", HelveticaNeue, Helvetica, Arial, sans-serif;
+  font-family: 'Roboto', sans-serif, "Helvetica Neue", HelveticaNeue, Helvetica, Arial, sans-serif;
+
+  &.bg_color {
+    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#5eb8fe+0,63d9e3+100 */
+    background: rgb(94,184,254); /* Old browsers */
+    background: -moz-linear-gradient(top,  rgba(94,184,254,1) 0%, rgba(99,217,227,1) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  rgba(94,184,254,1) 0%,rgba(99,217,227,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  rgba(94,184,254,1) 0%,rgba(99,217,227,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5eb8fe', endColorstr='#63d9e3',GradientType=0 ); /* IE6-9 */
+  }
 }
 
-// index
+
+
+// 顏色
+$deep_blue: rgba(9, 32, 88, 1); // 主色・深藍
+$bright_blue: rgba(47, 49, 229, 1); // 主色・亮藍
+
+
+
+// 首頁
 .i_bg {
   display: inline-block;
   width: 100%;
-  height: 100vh;
   @include clearfix();
-  
-  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#5eb8fe+0,63d9e3+100 */
-  background: rgb(94,184,254); /* Old browsers */
-  background: -moz-linear-gradient(top,  rgba(94,184,254,1) 0%, rgba(99,217,227,1) 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top,  rgba(94,184,254,1) 0%,rgba(99,217,227,1) 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom,  rgba(94,184,254,1) 0%,rgba(99,217,227,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5eb8fe', endColorstr='#63d9e3',GradientType=0 ); /* IE6-9 */
+  position: relative;
+
+  margin:0px;
+  padding:0px;
+  background-image: url('../img/w_bg.png'); // 需要再調整
+  background-repeat: no-repeat;
+  background-attachment:fixed;
+  background-position: 0 0; 
+  background-size: contain;
+
+  @include range-width(450px, 1400px) {
+    background-size: 60% 100%;
+  }
+
+  @include range-width(0, 450px) {
+    background-size: 107% 58%; 
+    background-position: 0 bottom; 
+  }
 
   .i_box_l, .i_box_r {
     display: inline-block;
     width: 50%;
     height: 100vh;
-    float: left;
     @include clearfix();
+
+    @include range-width(0, 450px) {
+      width: 100%;
+      padding: 15px;
+      height: auto;
+    }
   }
 
   .i_box_l {
+    float: left;
     position: relative;
+
+    @include range-width(0, 450px) {
+      position: static;
+    }
 
     .i_cent_img {
       display: inline-block;
       position: absolute;
-      top: 30%;
+      top: 20%;
       right: 0;
       width: 100%;
       max-width: 550px;
       float: right;
 
-      // d
-      height: 400px;
-      border: 1px solid rgba(255, 0, 0, .3);
+      @include range-width(0, 450px) {
+        top: 0;
+        position: static;
+        padding: 0 50px;
+      }
+
+      img {
+        display: inline-block;
+        width: 100%;
+        max-width: 580px;
+      }
     }
   }
 
   .i_box_r {
+    float: right;
+
     .i_cent_type {
       display: inline-block;
       width: 100%;
       max-width: 550px;
       float: left;
+      padding: 60px 0 0 75px;
 
-      // d
-      height: 400px;
-      border: 1px solid rgba(255, 0, 0, .3);
+      @include range-width(0, 450px) {
+        padding: 0;
+        float: none;
+      }
+
+      .ir_boxs {
+        display: inline-block;
+        width: 100%;
+        @include clearfix();
+        text-align: left;
+
+        @include range-width(0, 450px) {
+          text-align: center;
+        }
+
+        img {
+          display: inline-block;
+          width: 100%;
+          max-width: 191px;
+          padding-top: 5px;
+        }
+      }
     }
   }
 
+  .i_footer {
+    display: inline-block;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    @include clearfix();
+    margin: 20px 0;
+
+    @include range-width(0, 450px) {
+      padding: 15px;
+      position: static;
+      margin: 0;
+    }
+
+    .i_footer_boxs {
+      display: inline-block;
+      width: 100%;
+      max-width: 1100px;
+      margin: 0 auto;
+
+      .i_footer_box {
+        display: inline-block;
+        width: 50%;
+        max-width: 550px;
+        float: left;
+        color: $deep_blue;
+        font-size: .9rem;
+        text-align: left;
+
+        @include range-width(0, 450px) {
+          width: 100%;
+          text-align: right;
+
+            &:last-child {
+              display: none;
+            }
+          }
+
+        .i_link {
+          float: right;
+          color: $deep_blue;
+          font-size: .9rem;
+          font-weight: 400;
+          @include transition(color, .3s);
+
+          &:after {
+            display: inline-block;
+            content: '|';
+            margin: 0 10px;
+          }
+
+          &:first-child {
+            &:after {
+              display: none;
+            }
+          }
+
+          &:hover {
+            color: $bright_blue;
+          }
+        }
+      }
+    }
+  }
 }
 
 
 
 
+// 連結
+a {
+  display: inline-block;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.btn_login {
+  padding: 8px 14px;
+  background-color: white;
+  @include border-radius(30px);
+  color: $bright_blue;
+  font-size: 1rem;
+  font-weight: 500;
+  @include transition(all .3s);
+
+  &:hover {
+    background-color: $bright_blue;
+    color: white;
+  }
+}
+
+.btn_blueLine, .btn_brightBlue {
+  padding: 12px 16px;
+  font-size: 1rem;
+  @include border-radius(30px);
+  @include transition(all .3s);
+  
+   &:after {
+    display: inline-block;
+    content: '\e906';
+    font-family: 'icon';
+    font-size: 1rem;
+    margin-left: 3px;
+  }
+
+  @include range-width(0, 450px) {
+    width: 90%;
+    text-align: center;
+    padding: 15px 16px;
+
+    &:last-child {
+      margin-top: 15px;
+    }
+  }
+}
+
+.btn_blueLine {
+  color: $bright_blue;
+  background-color: white;
+  border: 1px solid $bright_blue;
+
+  &:hover {
+    color: white;
+    background-color: $bright_blue;
+    opacity: .9;
+  }
+}
+
+.btn_brightBlue {
+  color: white;
+  background-color: $bright_blue;
+  border: 1px solid $bright_blue;
+
+  &:hover {
+    color: white;
+    background-color: $bright_blue;
+    opacity: .8;
+  }
+}
+
+
+
+// 靠左・靠右
+.order_left {
+  float: left;
+}
+.order_right {
+  float: right;
+}
+
+
+
+// 文字
+h1, h2, h3 {
+  color: white;
+  margin: 5px 0;
+}
+
+h1, h2 {
+  font-size: 4rem;
+  @include text-shadow(2px 4px 5px 2px rgba(0, 0, 0, .3));
+
+  @include range-width(0, 450px) {
+    font-size: 2.8rem;
+  }
+}
+
+h1 {
+  font-weight: 900;
+}
+
+h2 {
+  font-weight: 400;
+  margin-top: 25%;
+
+  @include range-width(0, 450px) {
+    margin-top: 10%;
+  }
+}
+
+h3 {
+  font-size: 1.3rem;
+  font-weight: 300;
+  @include text-shadow(2px 2px 4px 2px rgba(0, 0, 0, .3));
+
+  @include range-width(0, 450px) {
+    font-size: 1.2rem;
+    margin-bottom: 20px;
+  }
+}
+
+
+
+// 空間
+.magTop45 {
+  margin-top: 45px;
+
+  @include range-width(0, 450px) {
+    margin-top: 0;
+  }
+}
+
+.magRight20 {
+  margin-right: 20px;
+
+  @include range-width(0, 450px) {
+    margin-right: 0;
+  }
+}
 
 
 
