--- a/css/public.css
+++ b/css/public.css
@@ -1,9 +1,7 @@
 @charset "UTF-8";
 *, *:after, *:before { vertical-align: top; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; -moz-osx-font-smoothing: subpixel-antialiased; -webkit-font-smoothing: subpixel-antialiased; -moz-font-smoothing: subpixel-antialiased; -ms-font-smoothing: subpixel-antialiased; -o-font-smoothing: subpixel-antialiased; }
 
-html { height: 100%; margin: 0; padding: 0; }
-
-body { position: relative; display: inline-block; width: 100%; margin: 0; padding: 0; color: #5a5a5a; font-size: 12px; text-align: center; font-family: 'Roboto', sans-serif, "Helvetica Neue", HelveticaNeue, Helvetica, Arial, sans-serif; }
+body { position: relative; display: inline-block; width: 100%; height: 100%; margin: 0; padding: 0; color: #5a5a5a; font-size: 12px; text-align: center; font-family: 'Roboto', sans-serif, "Helvetica Neue", HelveticaNeue, Helvetica, Arial, sans-serif; }
 body.bg_color { /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#5eb8fe+0,63d9e3+100 */ background: #5eb8fe; /* Old browsers */ background: -moz-linear-gradient(top, #5eb8fe 0%, #63d9e3 100%); /* FF3.6-15 */ background: -webkit-linear-gradient(top, #5eb8fe 0%, #63d9e3 100%); /* Chrome10-25,Safari5.1-6 */ background: linear-gradient(to bottom, #5eb8fe 0%, #63d9e3 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5eb8fe', endColorstr='#63d9e3',GradientType=0 ); /* IE6-9 */ }
 body.bg_color_p { /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#5eb8fe+0,63d9e3+100 */ background: #c5e3f8; /* Old browsers */ background: -moz-linear-gradient(top, rgba(94, 184, 254, 0.5) 0%, rgba(99, 217, 227, 0.5) 100%); /* FF3.6-15 */ background: -webkit-linear-gradient(top, rgba(94, 184, 254, 0.5) 0%, rgba(99, 217, 227, 0.5) 100%); /* Chrome10-25,Safari5.1-6 */ background: linear-gradient(to bottom, rgba(94, 184, 254, 0.5) 0%, rgba(99, 217, 227, 0.5) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c5e3f8', endColorstr='#c7ebf2',GradientType=0 ); /* IE6-9 */ }
 
@@ -19,7 +17,8 @@ body.bg_color_p { /* Permalink - use to edit and share this gradient: https://co
 .page_boxs .page_box header .link_home img { display: inline-block; width: 100%; max-width: 191px; margin-top: 7px; }
 .page_boxs .page_box header nav { display: inline-block; float: right; }
 @media screen and (max-width: 449px) and (min-width: 0) { .page_boxs .page_box header nav { display: none; } }
-.page_boxs .page_box main .cent_boxs { display: inline-block; width: 100%; background-color: white; -moz-border-radius: 10px; -webkit-border-radius: 10px; border-radius: 10px; -moz-box-shadow: 0 1px 4px 0 rgba(0, 35, 11, 0.2); -webkit-box-shadow: 0 1px 4px 0 rgba(0, 35, 11, 0.2); box-shadow: 0 1px 4px 0 rgba(0, 35, 11, 0.2); height: 500px; }
+.page_boxs .page_box main .cent_boxs { display: inline-block; width: 100%; background-color: white; -moz-border-radius: 10px; -webkit-border-radius: 10px; border-radius: 10px; -moz-box-shadow: 0 1px 4px 0 rgba(0, 35, 11, 0.2); -webkit-box-shadow: 0 1px 4px 0 rgba(0, 35, 11, 0.2); box-shadow: 0 1px 4px 0 rgba(0, 35, 11, 0.2); padding: 35px 0; *zoom: 1; }
+.page_boxs .page_box main .cent_boxs:after { display: table; content: ""; line-height: 0; clear: both; }
 .page_boxs .page_box main .cent_boxs.cent_mobile { display: none; }
 @media screen and (max-width: 449px) and (min-width: 0) { .page_boxs .page_box main .cent_boxs.cent_mobile { display: inline-block; margin-bottom: 20px; height: 100px; } }
 .page_boxs .page_box footer { *zoom: 1; margin: 20px 0; text-align: left; }
@@ -27,21 +26,63 @@ body.bg_color_p { /* Permalink - use to edit and share this gradient: https://co
 @media screen and (max-width: 449px) and (min-width: 0) { .page_boxs .page_box footer { text-align: center; } }
 .page_boxs .page_box footer .footer_box { display: inline-block; float: right; }
 
+.cent_box { display: inline-block; float: left; padding: 0 35px; text-align: left; }
+@media screen and (max-width: 449px) and (min-width: 0) { .cent_box { padding: 0 20px; } }
+.cent_box.cent_box35 { width: 35%; }
+@media screen and (max-width: 449px) and (min-width: 0) { .cent_box.cent_box35 { width: 100%; } }
+.cent_box.cent_box65 { width: 65%; }
+@media screen and (max-width: 449px) and (min-width: 0) { .cent_box.cent_box65 { width: 100%; padding-top: 30px; } }
+.cent_box.cent_box50 { width: 50%; }
+@media screen and (max-width: 449px) and (min-width: 0) { .cent_box.cent_box50 { width: 100%; } }
+
+.all_box, .team_pic_box, .team_type_box { display: inline-block; width: 100%; }
+@media screen and (max-width: 449px) and (min-width: 0) { .all_box .team_pic_box, .team_pic_box .team_pic_box, .team_type_box .team_pic_box { width: 30%; float: left; }
+  .all_box .team_type_box, .team_pic_box .team_type_box, .team_type_box .team_type_box { width: 65%; float: right; } }
+
+.team_pic_box, .team_type_box { margin-top: 20px; }
+@media screen and (max-width: 449px) and (min-width: 0) { .team_pic_box, .team_type_box { margin-top: 0; } }
+
+.team_pic_box { text-align: center; }
+@media screen and (max-width: 449px) and (min-width: 0) { .team_pic_box { text-align: left; } }
+.team_pic_box img { display: inline-block; width: 100%; max-width: 95px; }
+
+input { outline: 0; }
+
+.toEnter { display: inline-block; width: 100%; padding: 8px 15px; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; font-size: 1.2rem; color: #092058; font-weight: 700; text-align: left; }
+
+.inEnter { display: inline-block; width: calc(100% - 50px * 2); padding: 8px 15px 8px 0; border: 0; font-size: 1.2rem; color: #092058; font-weight: 700; text-align: left; }
+.inEnter.addEnter { color: #d2d2d2; font-weight: 400; }
+
+.input_box { display: inline-block; width: 100%; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; margin-bottom: 18px; }
+
+.social_box { display: inline-block; width: 40px; height: 40px; -moz-border-radius: 20px; -webkit-border-radius: 20px; border-radius: 20px; line-height: 40px; text-align: center; background-color: #092058; border: 1px solid #092058; margin-right: 15px; color: white; font-size: 1.2rem; }
+
+.borderGray { border: 1px solid rgba(165, 165, 165, 0.5); }
+
+.borderGray_left { border-left: 1px dotted rgba(165, 165, 165, 0.5); }
+@media screen and (max-width: 449px) and (min-width: 0) { .borderGray_left { border-top: 1px dotted rgba(165, 165, 165, 0.5); border-left: 0; } }
+
+.borderBlue { border: 1px solid #092058; }
+
+.btn_status_box { display: inline-block; cursor: pointer; width: 40px; height: 40px; -moz-border-radius: 20px; -webkit-border-radius: 20px; border-radius: 20px; line-height: 40px; text-align: center; background-color: transparent; font-size: 1.2rem; float: right; }
+.btn_status_box.c_green { color: #6db53a; }
+.btn_status_box.c_gray { color: #a5a5a5; }
+
 a { display: inline-block; cursor: pointer; text-decoration: none; -moz-transition: all 0.3s; -o-transition: all 0.3s; -webkit-transition: all 0.3s; transition: all 0.3s; }
 
-.btn_login { padding: 8px 14px; background-color: white; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; color: #2f31e5; font-size: 1rem; font-weight: 500; }
-.btn_login:hover { background-color: #2f31e5; color: white; }
+.link_login { padding: 8px 14px; background-color: white; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; color: #2f31e5; font-size: 1rem; font-weight: 500; }
+.link_login:hover { background-color: #2f31e5; color: white; }
 
-.btn_blueLine, .btn_brightBlue { padding: 12px 16px; font-size: 1rem; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; }
-.btn_blueLine:after, .btn_brightBlue:after { display: inline-block; content: '\e906'; font-family: 'icon'; font-size: 1rem; margin-left: 3px; }
-@media screen and (max-width: 449px) and (min-width: 0) { .btn_blueLine, .btn_brightBlue { width: 90%; text-align: center; padding: 15px 16px; }
-  .btn_blueLine:last-child, .btn_brightBlue:last-child { margin-top: 15px; } }
+.link_blueLine, .link_brightBlue { padding: 12px 16px; font-size: 1rem; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; }
+.link_blueLine:after, .link_brightBlue:after { display: inline-block; content: '\e906'; font-family: 'icon'; font-size: 1rem; margin-left: 3px; }
+@media screen and (max-width: 449px) and (min-width: 0) { .link_blueLine, .link_brightBlue { width: 90%; text-align: center; padding: 15px 16px; }
+  .link_blueLine:last-child, .link_brightBlue:last-child { margin-top: 15px; } }
 
-.btn_blueLine { color: #2f31e5; background-color: white; border: 1px solid #2f31e5; }
-.btn_blueLine:hover { color: white; background-color: #2f31e5; opacity: .9; }
+.link_blueLine { color: #2f31e5; background-color: white; border: 1px solid #2f31e5; }
+.link_blueLine:hover { color: white; background-color: #2f31e5; opacity: .9; }
 
-.btn_brightBlue { color: white; background-color: #2f31e5; border: 1px solid #2f31e5; }
-.btn_brightBlue:hover { color: white; background-color: #2f31e5; opacity: .8; }
+.link_brightBlue { color: white; background-color: #2f31e5; border: 1px solid #2f31e5; }
+.link_brightBlue:hover { color: white; background-color: #2f31e5; opacity: .8; }
 
 .web_menu { color: #092058; font-size: 1rem; font-weight: 400; line-height: 37px; }
 .web_menu:hover { text-decoration: underline; color: #2f31e5; }
@@ -56,6 +97,8 @@ a { display: inline-block; cursor: pointer; text-decoration: none; -moz-transiti
 .footer_menu:after { display: inline-block; content: '|'; margin: 0 10px; color: #092058; }
 .footer_menu:hover { color: #2f31e5; }
 .footer_menu:last-child:after { display: none; }
+
+.team_title { display: inline-block; width: 100%; color: #092058; font-size: 1.4rem; font-weight: 700; padding-bottom: 10px; }
 
 .order_left { float: left; }
 
@@ -78,8 +121,14 @@ p { display: inline-block; padding: 0; margin: 0; }
 
 .footer_type { color: #092058; font-size: .9rem; font-weight: 300; }
 
+.team_type { display: inline-block; width: 100%; color: #092058; font-size: 1.2rem; font-weight: 400; }
+
+.bright_type13 { color: #2f31e5; font-size: 1.2rem; font-weight: 500; }
+
 .magTop45 { margin-top: 45px; }
 @media screen and (max-width: 449px) and (min-width: 0) { .magTop45 { margin-top: 0; } }
 
 .magRight20 { margin-right: 20px; }
 @media screen and (max-width: 449px) and (min-width: 0) { .magRight20 { margin-right: 0; } }
+
+.padTB15 { padding: 15px 0; }
